<resources>
    <string name="app_name">AutoPool</string>
    <string name="title_activity_maps">Map</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>
    <string name="title_text">Login</string>
    <string name="desc_google_icon">Google</string>
    <string name="disconnect">disconnect</string>
    <string name="sign_out">sign out</string>
    <string name="NonGmailUsername">Enter Username</string>
    <string name="NonGmailPassword">enter password</string>
    <string name="sign_in_Without_Google">sign in without google</string>
    <string name="user_name">user name</string>
    <string name="email_hint">email</string>
    <string name="cars">cars</string>
    <string name="stop_points">stops</string>
</resources>
