<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hackathon2016.autopool.EditProfile">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Map"
        android:onClick="continueToMap"
        android:id="@+id/button"
        android:layout_marginBottom="54dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:inputType="textPostalAddress|textCapWords|textNoSuggestions"
        android:layout_marginTop="54dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <Button
        android:id="@+id/cars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/cars"
        android:inputType="textEmailAddress"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/stop_points"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/stop_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/stop_points"
        android:inputType="textEmailAddress"
        android:layout_marginTop="64dp"
        android:layout_below="@+id/email_address"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/email_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:layout_marginTop="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
