
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_grey_700"
        android:orientation="vertical"
        android:weightSum="4"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newby"
            android:layout_weight="3.84" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/title_text"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="36sp" />

            <EditText
                android:id="@+id/NonGmailUsername"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:focusable="true"
                android:fadeScrollbars="true"
                android:gravity="center"
                android:maxLines="5"
                android:padding="10dp"
                android:scrollbars="vertical"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:singleLine="true"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/NonGmailPassword"
                android:enabled="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fadeScrollbars="true"
                android:gravity="center"
                android:maxLines="5"
                android:padding="10dp"
                android:scrollbars="vertical"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:singleLine="true"
                android:selectAllOnFocus="true" />

            <Button
                android:id="@+id/sign_in_Without_Google"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:text="@string/sign_in_Without_Google"
                android:layout_weight="0.21" />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signed_out"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fadeScrollbars="true"
                android:gravity="center"
                android:maxLines="5"
                android:padding="10dp"
                android:scrollbars="vertical"
                android:textColor="@android:color/white"
                android:textSize="14sp" />


        </LinearLayout>

    </LinearLayout>
